# HarmonyNixieTracker

./: .gitignore
firmware/HarmonyNixieTracker.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
firmware/HarmonyNixieTracker.X/nbproject/private/: configurations.xml  private.xml
firmware/src/: app.c  app.h  app_command.c  app_command.h  app_command_debug.c  app_command_debug.h  app_command_fetch.c  app_command_fetch.h  app_command_flash.c  app_command_flash.h  app_command_nixie.c  app_command_nixie.h  app_command_ntp.c  app_command_ntp.h  app_command_phy.c  app_command_phy.h  app_command_power.c  app_command_power.h  app_command_rtc.c  app_command_rtc.h  app_command_shift_register.c  app_command_shift_register.h  app_command_task.c  app_command_task.h  app_command_wifi.c  app_command_wifi.h  app_flash.c  app_flash.h  app_https_client.c  app_https_client.h  app_network.c  app_network.h  app_network_utils.c  app_network_utils.h  app_nixie.c  app_nixie.h  app_power.c  app_power.h  app_rtc.c  app_rtc.h  (+17 more)
firmware/src/gcc/: memmem.c  memmem.h
firmware/src/system_config/default/: config.h  configuration.xml  default.mhc  system_config.h  system_definitions.h  system_init.c  system_interrupt.c  system_tasks.c
software/: CMakeLists.txt  LICENSE
software/cmake/: configure_build.cmake  external_libs.cmake  macros.cmake  precompiled_libs.cmake
software/cmake/Modules/: FindGmock.cmake  FindGtest.cmake
software/source/: CMakeLists.txt
software/source/firmware_tests/: CMakeLists.txt  app_nixie_test.cc  system_definitions.h  util_string_test.cc  util_url_test.cc
software/source/firmware_tests/stubs/: system_definitions.h
software/source/firmware_tests/stubs/tcpip/: tcpip.h
software/source/test/: CMakeLists.txt  test.h
software/source/test/internal/: test_main.cc
